--- a/css/base.css
+++ b/css/base.css
@@ -128,9 +128,10 @@ html {
 }
 
 body {
-  font-family: "PlayfairDisplay Medium", sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 1rem;
   color: var(--text-color);
+  background-color: #f5f5f5;
 }
 
 h1,
@@ -191,10 +192,17 @@ img {
 }
 
 /* Style default btn */
-.btn {
-  padding: 10px 34px;
-  background: var(--primary-color);
-  color: #ffff;
+.button {
+  background-color:
+    #0673ba;
+  border-color: #fff;
+  border-radius: 25px;
+  border-style: solid;
+  border-width: 0.8px;
+  color: #fff;
+  display: inline-block;
+  padding: 6px 37px 5px;
+  font-weight: 700;
 }
 
 /* Style default btn-large */
@@ -202,7 +210,7 @@ img {
   padding: 12px 38px;
   font-size: 1.1rem;
   border: none;
-}
+} 
 
 /* Style default section */
 .section-box {
@@ -223,4 +231,11 @@ img {
   color: #121212;
   font-weight: 300;
   font-family: sans-serif;
+}
+
+.box-title{
+  color: black;
+  font-size: 18px;
+  line-height: 27px;
+  font-weight: 700;
 }
