--- a/css/base.css
+++ b/css/base.css
@@ -128,7 +128,7 @@ html {
 }
 
 body {
-  font-family: Roboto, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1rem;
   color: var(--text-color);
   background-color: #f5f5f5;
@@ -238,4 +238,31 @@ img {
   font-size: 18px;
   line-height: 27px;
   font-weight: 700;
+}
+
+.footer-title{
+  font-weight: 700;
+  color: rgb(51, 51, 51);
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.grid{
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+/* ------------Owl Carausel---------------- */
+
+.owl-nav {
+  display: flex !important;
+}
+
+.owl-nav .owl-prev,
+.owl-nav .owl-next {
+  position: absolute;
+  top: 50%;
+  cursor: pointer;
+  z-index: 999999 !important;
+  pointer-events: auto !important;
 }
