--- a/css/base.css
+++ b/css/base.css
@@ -125,6 +125,9 @@
 html {
   font-size: 14px;
   scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 body {
@@ -132,6 +135,9 @@ body {
   font-size: 1rem;
   color: var(--text-color);
   background-color: #f5f5f5;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 h1,
