--- a/css/login.css
+++ b/css/login.css
@@ -1,111 +1,123 @@
 /* ------------Login---------------- */
 
 .main-breakcrumb .light-text {
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 21px;
-    color: rgb(119, 119, 119);
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 21px;
+  color: rgb(119, 119, 119);
 }
 
 .main-breakcrumb .light-text:hover {
-    color: red;
+  color: red;
 }
 
 .main-breakcrumb .bold-text {
-    font-weight: 400;
-    font-size: 15px;
-    color: black;
-    line-height: 21px;
+  font-weight: 400;
+  font-size: 15px;
+  color: black;
+  line-height: 21px;
 }
 
 .form-login {
-    width: 600px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 600px;
+  padding: 20px;
+  box-sizing: border-box;
+  margin: 0 auto; /* Giữ form luôn ở giữa */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.form-login .form-control {
+  width: 100%;
+  padding: 10px;
 }
 
 .form-login .title {
-    font-weight: 700;
-    line-height: 36px;
-    font-size: 24px;
-    color: rgb(51, 51, 51);
+  font-weight: 700;
+  line-height: 36px;
+  font-size: 24px;
+  color: rgb(51, 51, 51);
 }
 
 .form-login p {
-    font-weight: 400;
-    line-height: 21px;
-    font-size: 14px;
-    color: rgb(51, 51, 51);
+  font-weight: 400;
+  line-height: 21px;
+  font-size: 14px;
+  color: rgb(51, 51, 51);
 }
 
 .register-by-facebook {
-    display: inline-block;
-    padding: 15px;
-    background-color: #3B5999;
-    color: white;
-    max-height: 50px;
-    position: relative;
-    padding-left: 60px;
-    margin: 0 10px;
-    text-align: center;
+  display: inline-block;
+  padding: 15px;
+  background-color: #3b5999;
+  color: white;
+  max-height: 50px;
+  position: relative;
+  padding-left: 60px;
+  margin: 0 10px;
+  text-align: center;
 }
 
 .register-by-google {
-    display: inline-block;
-    padding: 15px;
-    background-color: #DC4E41;
-    color: white;
-    max-height: 50px;
-    position: relative;
-    margin: 0 10px;
-    padding-left: 60px;
+  display: inline-block;
+  padding: 15px;
+  background-color: #dc4e41;
+  color: white;
+  max-height: 50px;
+  position: relative;
+  margin: 0 10px;
+  padding-left: 60px;
 }
 
 .register-by-facebook:before {
-    content: '\f09a';
-    width: 50px;
-    height: 50px;
-    background-color: #34518E;
-    position: absolute;
-    font-family: "FontAwesome";
-    bottom: 0;
-    left: 0;
-    top: 0;
-    padding-top: 10px;
-    font-size: 20px;
-    color: white;
+  content: "\f09a";
+  width: 50px;
+  height: 50px;
+  background-color: #34518e;
+  position: absolute;
+  font-family: "FontAwesome";
+  bottom: 0;
+  left: 0;
+  top: 0;
+  padding-top: 10px;
+  font-size: 20px;
+  color: white;
 }
 
 .register-by-google:before {
-    content: '\f1a0';
-    width: 50px;
-    height: 50px;
-    background-color: #CF4437;
-    position: absolute;
-    font-family: "FontAwesome";
-    left: 0;
-    top: 0;
-    padding-top: 10px;
-    color: white;
-    font-size: 20px;
+  content: "\f1a0";
+  width: 50px;
+  height: 50px;
+  background-color: #cf4437;
+  position: absolute;
+  font-family: "FontAwesome";
+  left: 0;
+  top: 0;
+  padding-top: 10px;
+  color: white;
+  font-size: 20px;
 }
 
-.form-login .line1{
-    margin-top: 29px;
-    border-top: 1px solid #E5E5E5;
-    position: relative;
-    margin-bottom: 24px;
-    line-height: 40px;
-    width: 580px;
-    margin-left: 10px;
+.form-login .line1 {
+  margin-top: 29px;
+  border-top: 1px solid #e5e5e5;
+  position: relative;
+  margin-bottom: 24px;
+  line-height: 40px;
+  width: 580px;
+  margin-left: 10px;
 }
 
-.form-login .line1 p{
-    background: #f5f5f5;
-    margin: -23px 0px 0px 0;
-    position: absolute;
-    text-align: center;
-    padding: 0 10px;
-    left: 45%;
+.form-login .line1 p {
+  background: #f5f5f5;
+  margin: -23px 0px 0px 0;
+  position: absolute;
+  text-align: center;
+  padding: 0 10px;
+  left: 45%;
 }
 
 .form-login .btn-submit{
@@ -122,18 +134,66 @@
     width: auto;
     margin-bottom: 0px;
     margin: 0 auto;
+    white-space: nowrap;
 }
 
-.form-login .form-group .forgot-password{
-    color: rgb(0, 86, 179);
-    font-weight: 400;
-    line-height: 21px;
-    font-size: 14px;
+.form-login .form-group .forgot-password {
+  color: rgb(0, 86, 179);
+  font-weight: 400;
+  line-height: 21px;
+  font-size: 14px;
 }
 
-.form-login .form-group .resgister-now{
-    color: rgb(0, 86, 179);
-    font-weight: 400;
-    line-height: 21px;
+.form-login .form-group .resgister-now {
+  color: rgb(0, 86, 179);
+  font-weight: 400;
+  line-height: 21px;
+  font-size: 14px;
+}
+
+/* Tùy chỉnh khi màn hình nhỏ hơn 768px */
+@media (max-width: 768px) {
+  .form-login {
+    width: 90%;
+  }
+
+  .form-login .line1 {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .form-login .line1 p {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .register-by-facebook,
+  .register-by-google {
+    width: 100%;
+    padding-left: 50px;
+    text-align: center;
+  }
+
+  .register-by-facebook:before,
+  .register-by-google:before {
+    width: 40px;
+    height: 40px;
+    font-size: 18px;
+    padding-top: 6px;
+  }
+}
+
+/* Tùy chỉnh khi màn hình nhỏ hơn 480px */
+@media (max-width: 480px) {
+  .form-login .title {
+    font-size: 20px;
+  }
+
+  .form-login p {
+    font-size: 13px;
+  }
+
+  .form-login .btn-submit {
     font-size: 14px;
+  }
 }
